edited the hero text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="services">
             <div class="serviceTitle">
                 <h2>Get the job done</h2>
-                <p>I offer a reliable work that meets your needs and expectations</p>
+                <p>I offer a reliable work that meets your needs and ovreall expectations</p>
             </div>
             <div class="servicesCont">
                 <div class="servicesCard">
